fix alignment

--- a/main.css
+++ b/main.css
@@ -83,6 +83,7 @@ body {
 .date-separator {
   padding-bottom: 1rem;
   margin-bottom: 1rem;
+  text-align: right;
 }
 
 .date-separator:not(:last-child) {
@@ -91,6 +92,7 @@ body {
 
 .date-separator h3 {
   font-weight: 300;
+  text-align: center;
 }
 
 .weather-box.morning {
